// -----------------------------------------------
// phantom-lang
// https://github.com/notcl4y14/phantom-lang
// -----------------------------------------------

// -----------------------------------------------
// UNDER DEVELOPMENT VERSIONS
// -----------------------------------------------

// 20/12/2023
- Initial release
- Created main.js